[project]
name = "allergy-cytotoxic"
version = "0.1.0"
description = "细胞毒实验排班系统 - 基于Streamlit的可视化交互排班工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "chinesecalendar>=1.10.0",
    "requests>=2.28.0",
    "openpyxl>=3.1.0",
    "plotly>=5.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]
